refact: updating documentation
