# src/routes/auth.routes.ts
@@ -6,5 +6,6 @@ const authController = new AuthController();
 
 authRouter.post("/login", authController.login);
 authRouter.post("/refresh_token", authController.refresh_token);
+authRouter.post("/forgot", authController.forgot);
 export {authRouter};
 
